--- a/ACL/src/UI/PackageDelivery.csproj
+++ b/ACL/src/UI/PackageDelivery.csproj
@@ -8,11 +8,12 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>PackageDelivery</RootNamespace>
     <AssemblyName>PackageDelivery</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -75,6 +76,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Common\CustomMessageBox.cs" />
     <Compile Include="Delivery\ChangeCustomerViewModel.cs" />
     <Compile Include="Delivery\ChangeProductViewModel.cs" />
     <Compile Include="Delivery\Cstm.cs" />
@@ -167,6 +169,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Utils\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PackageDeliveryNew\PackageDeliveryNew.csproj">
+      <Project>{e015804e-94fb-4231-b7ef-04ea4d9498fa}</Project>
+      <Name>PackageDeliveryNew</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
